--- a/templates/main.html
+++ b/templates/main.html
@@ -5,7 +5,6 @@
         <title>{% block title %} handler.application.settings['game_name'] {% end %}</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Hacker War Game">
-        <meta name="author" content="moloch">
         <link href="/static/images/favicon.ico" rel="shortcut icon" />
         <link href="/static/css/bootstrap-responsive.css" rel="stylesheet" />
         <link href="/static/css/font-awesome.min.css" rel="stylesheet" />
@@ -29,19 +28,17 @@
         {% module Menu() %}
         <div class="container-fluid animated fadeIn">
             {% block content %} Content Missing {% end %}
-           
+
         </div><!--/.fluid-container-->
         <footer>
             <hr style="margin-bottom: -1px;">
             <div class="navbar-inner footernav">
-                <a href="http://root-the-box.com" target="_blank">
-                    Root the Box
+                <a href="http://b04rd.gs2w.tk" target="_blank">
+                    The Score Box
                 </a> &copy; {{ datetime.date.today().year }} -
-                Version {{ handler.application.settings['version'] }} -
-                <a href="https://github.com/moloch--/RootTheBox" target="_blank">Source Code</a> -
-                <a href="https://github.com/moloch--/RootTheBox/issues" target="_blank">Submit a Bug</a>
+                Version {{ handler.application.settings['version'] }}
             </div>
          </footer>
-   
+
     </body>
 </html>
