--- a/templates/public/about.html
+++ b/templates/public/about.html
@@ -19,36 +19,16 @@
                     <i class="fa fa-trophy"></i> Moloch
                 </h3>
                 <h3>
-                    ElJeffe
+                    TiLt
                 </h3>
                 <br />
                 <h2>With contributions from</h2>
                 <table style="width:500px; text-align: center;">
                     <tbody>
                         <tr>
-                            <td><h3>AnarKyx01</h3></td>
-                            <td><h3>ElmoArmy</h3></td>
-                            <td><h3>iggykrajci</h3></td>
-                        </tr>
-                        <tr>
-                            <td><h3>F13</h3></td>
-                            <td><h3>tinmartinet</h3></td>
-                            <td><h3>jinghli</h3></td>
-                        </tr>
-                        <tr>
-                            <td><h3>RyPeck</h3></td>
-                            <td><h3>Enki</h3></td>
-                            <td><h3>Eriner</h3></td>
-                        </tr>
-                        <tr>
-                            <td><h3>remi1411</h3></td>
-                            <td><h3>lavalamp</h3></td>
-                            <td><h3>dNetGuru</h3></td>
-                        </tr>
-                        <tr>
-                            <td><h3>Und3rf10w</h3></td>
-                            <td><h3>sporky</h3></td>
-                            <td><h3>shshzi</h3></td>
+                            <td><h3>XXXXX</h3></td>
+                            <td><h3>YYYYY</h3></td>
+                            <td><h3>ZZZZZ</h3></td>
                         </tr>
                     </tbody>
                 </table>
@@ -58,8 +38,8 @@
                 <h2>Special Thanks</h2>
                 <hr>
                 <br />
-                <a href="http://bishopfox.com" target="_blank">
-                    <img src="/static/images/bf.png" />
+                <a href="http://gs2w.tk" target="_blank">
+                    <img src="/static/images/gs2w.png" />
                 </a>
                 <br />
                 <br />
