--- a/templates/public/home.html
+++ b/templates/public/home.html
@@ -7,7 +7,7 @@
 
 {% block content %}
     <div class="container">
-        <div class="well" style="background-image: url({{options.ctf_logo}}); background-position: center; background-repeat: no-repeat; background-size:contain; width:850px; height:600px; margin-top: 10px;">
+        <div class="well" style="background-image: url(/static/images/gs2w.png); background-position: center; background-repeat: no-repeat; background-size:contain; width:850px; height:600px; margin-top: 10px;">
             <h2>{{options.ctf_tagline}}</h2>
         </div>
     </div>
